tests/paczka1/small_fuzzy/41059109.err
Error in line 5: e5rBnrHMi A586 21,8
Error in line 11: kIOTyE4MmY S42 77,5
